--- a/templates/_partials_/_footer.html.twig
+++ b/templates/_partials_/_footer.html.twig
@@ -1,9 +1,9 @@
-<footer class="bg-dark text-white py-4 mt-5">
+<footer class="bg-dark text-white py-4">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
 				<h5>Mon Site</h5>
-				<p class="mb-0">Un footer basique réalisé avec Bootstrap.</p>
+				<p class="mb-0"></p>
 			</div>
 			<div class="col-md-3">
 				<h6>Liens utiles</h6>
