--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Connectez-vous !{% endblock %}
 
 {% block body %}
 <form method="post">
@@ -10,25 +10,70 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ logout_path() }}">Logout</a>
+            Vous êtes connecté a {{ app.user.userIdentifier }}, <a href="{{ logout_path() }}">Déconnexion</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputLastname">Lastname</label>
+    <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
+    <label for="inputLastname">Nom</label>
     <input type="text" value="{{ last_username }}" name="Lastname" id="inputLastname" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
     <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
     <div class="checkbox mb-3">
         <label>
-            <input type="checkbox" name="_remember_me"> Remember me
+            <input type="checkbox" name="_remember_me"> Se souvenir de moi
         </label>
     </div>
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Se connecter
     </button>
 </form>
+{% endblock %} #}
+
+{% extends 'base.html.twig' %}
+{% block title %}Connectez-vous !
+{% endblock %}
+{% block body %}
+	<div class="py-5" style="background-color: #2d3238;">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-6 col-lg-4">
+					<div class="card shadow-sm">
+						<div class="card-body">
+							{% if error %}
+								<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+							{% endif %}
+							{% if app.user %}
+								<div class="mb-3">
+									Vous êtes connecté comme
+									{{ app.user.userIdentifier }},
+									<a href="{{ logout_path() }}">Déconnexion</a>
+								</div>
+							{% endif %}
+							<h2 class="mb-4 text-center">Connexion</h2>
+							<form method="post">
+                                <div class="mb-3">
+                                    <label for="inputEmail">Email</label>
+                                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                                </div>
+								<div class="mb-3">
+									<label for="inputPassword" class="form-label">Mot de passe</label>
+									<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+								</div>
+								<input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+								<div class="form-check mb-3">
+									<input type="checkbox" name="_remember_me" class="form-check-input" id="rememberMe">
+									<label class="form-check-label" for="rememberMe">Se souvenir de moi</label>
+								</div>
+								<button class="btn btn-primary w-100" type="submit">Se connecter</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
